# ai-community

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  HOTFIX_user_type_column.md  README.md  package-lock.json  package.json  pyproject.toml  transcript-path-log.txt
.claude/: settings.json
.claude/commands/: front-review.md  review.md
.github/workflows/: ci.yml  test.yml
docs/: api-reference.md  backend-guideline.md  backend-implementation-guide.md  backend.md  chat-app-guide.md  chat-app-spec.md  contributing.md  deployment-guide.md  e2e-test-setup-guide.md  e2e-test-specification.md  frontend.md  playwright-test-examples.md  simple-backend-spec.md  test.md
prompts/: 001_ハルト.md  005_ソラ.md  backend-guideline.md  frontend-guideline.md  reviewer_personality.md  task.md
prompts/people/: 001_レン.md  002_ミナ.md  003_テツ.md  004_ルナ.md  005_ソラ.md  006_タカシ.md  006_ヤミ.md  007_エミ.md  007_クロノ.md  008_ウタ.md  008_ケンタ.md  008_ニャンタ.md  009_アヤノ.md  009_バグ.md  009_ロイド.md  010_カイ.md  010_ジハンキ.md  010_ユウスケ.md  011_コウキ.md  011_リカ.md  012_ナオミ.md  012_ハルト.md  013_ジロウ.md  013_マユ.md  common_prompt.md
prompts/people_old/: 001_レン.md  002_ミナ.md  003_テツ.md
src/backend/: README.md  chat.db  crud.py  database.py  db_inspector.py  gemini_api.py  log_monitor.py  main.py  models.py  pyproject.toml  run_step7_tests.py  schemas.py  test_comprehensive.py  test_websocket.py  websocket.py
src/backend/ai/: __init__.py  auto_conversation.py  conversation_config.py  conversation_timer.py  gemini_client.py  message_handlers.py  personality_manager.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 9cd82373621b_initial_migration_channels_and_messages_.py  ffa9f3061319_add_user_type_column_to_messages_table.py
src/backend/constants/: __init__.py  ai_config.py  logging.py  timezone.py
src/backend/utils/: __init__.py  discord_webhook.py  session_manager.py
src/backend/websocket/: __init__.py  handler.py  manager.py  types.py
src/frontend/: .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tests-setup.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
src/frontend/src/components/: ChannelList.tsx  ChatArea.tsx  Layout.tsx  MessageInput.test.tsx  MessageInput.tsx  MessageItem.test.tsx  MessageItem.tsx  MessageList.tsx
src/frontend/src/config/: constants.ts
src/frontend/src/data/: channels.ts
src/frontend/src/types/: chat.ts
src/frontend/tests/: setup.ts
src/frontend/tests/factories/: index.ts
src/frontend/tests/helpers/: test-setup.ts
src/frontend/tests/integration/: ChatApp.test.tsx  WebSocketConnection.test.tsx
src/frontend/tests/unit/components/: ChannelList.test.tsx  MessageInput.test.tsx  MessageItem.test.tsx  MessageList.test.tsx
src/frontend/tests/utils/: mocks.ts  test-utils.tsx  websocket-mock.ts
tests/: conftest.py
tests/backend/: conftest.py  test_api.py  test_models.py  test_supabase_ai_integration.py  test_supabase_client.py  test_supabase_crud.py  test_supabase_integration.py  test_supabase_migration.py  test_supabase_realtime.py  test_supabase_security.py  test_websocket.py
tests/backend/e2e/: test_chat_flow.py
tests/backend/integration/: test_api_channels.py  test_api_messages.py  test_database_operations.py  test_websocket_flow.py
tests/backend/unit/: test_crud.py  test_models.py  test_schemas.py  test_websocket_handlers.py
tests/frontend/: components.test.tsx  integration.test.tsx  setup.ts
tests/frontend/factories/: index.ts
tests/frontend/integration/: ChatApp.test.tsx  WebSocketConnection.test.tsx
tests/frontend/unit/components/: ChannelList.test.tsx  MessageInput.test.tsx  MessageItem.test.tsx  MessageList.test.tsx
tests/frontend/utils/: mocks.ts  test-utils.tsx  websocket-mock.ts
z/: 進捗.md
