[project]
name = "ai-community"
version = "0.1.0"
description = "AI Community - Modern chat application with React frontend and FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.13",
    "google-genai>=0.3.4",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "ANN", # type annotation
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PTH", # use `pathlib.Path` instead of `os.path`
    "RUF", # ruff specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line too long, handled by ruff format
]
unfixable = [
    "F841", # unused variable
]

[tool.ruff.lint.per-file-ignores]
# ファイルごとに無視するルール
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
# pydocstyleルールの設定
# docstringのスタイルを指定
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
